overflow issue

--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -74,6 +74,11 @@ body {
   font-family: 'General Sans', sans-serif;
 }
 
+main{
+  overflow-y: visible;
+  overflow-x: clip;
+}
+
 .container {
   position: relative;
   width: 100%;
